--- a/UI/AppStyle.xaml
+++ b/UI/AppStyle.xaml
@@ -1,8 +1,9 @@
-﻿<ResourceDictionary 
+﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:system="clr-namespace:System;assembly=mscorlib"
-    xmlns:local="clr-namespace:MyNameList.UI">
+    xmlns:local="clr-namespace:MyNameList.UI"
+    xmlns:component="clr-namespace:MyNameList.Component">
 
     <!--
     ######################################################################## 
@@ -13,7 +14,15 @@
     <SolidColorBrush x:Key="DefaultTextForeground" Color="#333333"/>
 
     <SolidColorBrush x:Key="GuideTextLabel" Color="#B1B8CC"/>
-    
+
+    <SolidColorBrush x:Key="PrimaryColor" Color="#9c27b0"/>
+    <SolidColorBrush x:Key="PrimaryLightColor" Color="#d05ce3"/>
+    <SolidColorBrush x:Key="PrimaryDarkColor" Color="#6a0080"/>
+    <SolidColorBrush x:Key="SecondaryColor" Color="#0288d1"/>
+    <SolidColorBrush x:Key="SecondaryLightColor" Color="#5eb8ff"/>
+    <SolidColorBrush x:Key="SecondaryDarkColor" Color="#0005b9"/>
+    <SolidColorBrush x:Key="PrimaryTextColor" Color="#ffffff"/>
+    <SolidColorBrush x:Key="SecondaryTextColor" Color="#fafafa"/>
     
     <!--
     ######################################################################## 
@@ -25,6 +34,37 @@
     ######################################################################## 
     ##### BaseStyle 
     ########################################################################-->
+    <Style TargetType="TextBlock" BasedOn="{StaticResource {x:Type TextBlock}}">
+        <Setter Property="FontFamily" Value="{StaticResource DefaultFontFamily}" />
+        <Setter Property="FontSize" Value="{StaticResource DefaultFonSize}" />
+        <Setter Property="Foreground" Value="{StaticResource DefaultTextForeground}" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+    </Style>
+    
+    <Style TargetType="TextBox" x:Key="BaseTextBoxStyle">
+        <Setter Property="FontFamily" Value="{StaticResource DefaultFontFamily}" />
+        <Setter Property="FontSize" Value="{StaticResource DefaultFonSize}" />
+        <Setter Property="Foreground" Value="{StaticResource DefaultTextForeground}" />
+        <Setter Property="BorderThickness" Value="0,0,0,1" />
+        <Setter Property="BorderBrush" Value="#EEEEEE" />
+        <Setter Property="MaxLength" Value="15" />
+        <Setter Property="Margin" Value="3,4" />
+        <Setter Property="HorizontalAlignment" Value="Left" />
+    </Style>
+
+    <Style TargetType="component:TextBoxEx" BasedOn="{StaticResource BaseTextBoxStyle}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type component:TextBoxEx}">
+                    <Border Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}">
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    
     <!-- ラベルボタン -->
     <Style x:Key="LabelButton" TargetType="Button">
         <Setter Property="FocusVisualStyle" Value="{x:Null}" />
