--- a/UI/MyNameListMain.xaml
+++ b/UI/MyNameListMain.xaml
@@ -50,7 +50,7 @@
         </StackPanel>
 
 
-        <ListView Name="cNameList"  Grid.Row="2" Grid.RowSpan="2" ItemsSource="{Binding}"  SelectionMode="Single" >
+        <ListView Name="cNameList"  Grid.Row="2" Grid.RowSpan="2" ItemsSource="{Binding}"  SelectionMode="Single" MouseDoubleClick="NameList_MouseDoubleClick" >
             <ListView.ItemContainerStyle >
                 <Style TargetType="ListViewItem" >
                     <Setter Property="OverridesDefaultStyle" Value="True"/>
